--- a/backend/competences-backend.cabal
+++ b/backend/competences-backend.cabal
@@ -2,7 +2,6 @@ cabal-version:      3.4
 name:               competences-backend
 version:            0.1.0.0
 license:            BSD-3-Clause
-license-file:       LICENSE
 author:             Markus Mayr
 maintainer:         markus.mayr@tuta.com
 category:           Web
@@ -14,13 +13,25 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib
+    default-extensions:
+        DuplicateRecordFields,
+        GADTs,
+        NoFieldSelectors,
+        OverloadedRecordDot,
+        OverloadedStrings,
+        TypeFamilies
+    exposed-modules:
+        Competences.Backend.Eff.Storage
     build-depends:
-        base ^>=4.20.0.0
+        base ^>=4.20.0.0,
+        competences-common,
+        containers,
+        effectful,
+        servant-server
     hs-source-dirs:   lib
     default-language: GHC2024
 
-executable competences
+executable competences-backend
     import:           warnings
     main-is:          Main.hs
     build-depends:
