--- a/cabal.project
+++ b/cabal.project
@@ -1,25 +1,16 @@
 packages: backend common frontend
 
--- index-state: 2025-02-11T14:26:56Z
--- 
--- allow-newer:
---   all:base
--- 
--- if arch(wasm32)
---   -- Required for TemplateHaskell. When using wasm32-wasi-cabal from
---   -- ghc-wasm-meta, this is superseded by the global cabal.config.
---   shared: True
--- 
---   -- https://github.com/haskellari/time-compat/issues/37
---   -- Older versions of time don't build on WASM.
---   constraints: time installed
---   allow-newer: time
--- 
---   -- https://github.com/haskellari/splitmix/pull/73
---   source-repository-package
---     type: git
---     location: https://github.com/amesgen/splitmix
---     tag: 5f5b766d97dc735ac228215d240a3bb90bc2ff75
--- 
--- package aeson
---   flags: -ordered-keymap
+allow-newer:
+  ixset-typed:template-haskell
+
+source-repository-package
+  --sha256: 0zkhrhdsypfw8w6dkjlcp7xgyn2y491p4smqp8mdbi8pvhl0n573
+  type: git
+  location: https://github.com/sumo/syb-with-class
+  tag: f67a776a4f7e8fe69ec0df35e953bd9422bb05b4
+
+source-repository-package
+  --sha256: NV8q6hAa8RLKjpBrzbVIQeSy679YmE0g4Cpt9M+rc28=
+  type: git
+  location: https://github.com/well-typed/ixset-typed
+  tag: 460901368dcb452d352a17bcd4b8f60200a6fa71
