--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -2,7 +2,6 @@ cabal-version:      3.4
 name:               competences-common
 version:            0.1.0.0
 license:            BSD-3-Clause
-license-file:       LICENSE
 author:             Markus Mayr
 maintainer:         markus.mayr@tuta.com
 category:           Web
@@ -14,19 +13,34 @@ common warnings
 
 library
     import:           warnings
+    default-extensions:
+        DuplicateRecordFields,
+        GADTs,
+        NoFieldSelectors,
+        OverloadedRecordDot,
+        OverloadedStrings
     exposed-modules:
-        Competences.Model.CompetenceGrid,
-        Competences.Model.Competence,
-        Competences.Model.Evidence,
-        Competences.Model.Student
+        Competences.API.Auth
+        Competences.API.CourseList
+        Competences.Model.Assessment
+        Competences.Model.Evidence
+        Competences.Model.Competence
+        Competences.Model.CompetenceGrid
+        Competences.Model.Resource
+        Competences.Model.User
+        Competences.Model
     build-depends:
         base ^>=4.20.0.0,
+        aeson,
         containers,
-        effectful,
+        generics-sop,
+        ixset-typed,
         servant,
+        servant-auth,
+        text,
         time,
         uuid
-    js-source-dirs:   lib
+    hs-source-dirs:   lib
     default-language: GHC2024
 
 test-suite competences-common-test
