Worked on common data model
Switched names from Event to Command, because we want the server to
be allowed to drop commands when they are non-sensical. I think that
name fits better.

Also, I've implemented the changing mechanism for fields now. And I
have added information on which users are affected when competences
or evidences are added or removed.

--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -22,9 +22,12 @@ library
         OverloadedStrings
     exposed-modules:
         Competences.API.CourseList
-        Competences.Event
+        Competences.Command
+        Competences.Command.ChangeField
+        Competences.Command.Common
         Competences.Model.Assessment
         Competences.Model.Evidence
+        Competences.Model.ChangableField
         Competences.Model.Competence
         Competences.Model.CompetenceGrid
         Competences.Model.Id
