--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -37,7 +37,10 @@ library
     build-depends:
         base ^>=4.20.0.0,
         aeson,
+        binary,
+        bytestring,
         containers,
+        cryptohash-sha1,
         generics-sop,
         ixset-typed,
         optics-core,
