--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -17,11 +17,15 @@ library
         DuplicateRecordFields,
         GADTs,
         NoFieldSelectors,
+        OverloadedLabels,
         OverloadedRecordDot,
         OverloadedStrings
     exposed-modules:
+        Competences.Frontend.App,
         Competences.Frontend.App.Action,
         Competences.Frontend.App.ComponentRegistry,
+        Competences.Frontend.App.RegisteredComponent,
+        Competences.Frontend.App.RegisteredComponentRegistrations,
         Competences.Frontend.App.State,
         Competences.Frontend.App.Topics,
         Competences.Frontend.Common.Button,
