Switch to a simpler model, where all components have access to a document
That document can, later on, sync itself automatically with the server.
All components that require it, are notified whenever that document
changes. Furthermore, components that need to change the document can do
so via a reference to the document.

--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -44,6 +44,7 @@ library
         generics-sop,
         ixset-typed,
         optics-core,
+        random,
         servant,
         servant-auth,
         text,
