--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -32,7 +32,6 @@ library
         Competences.Frontend.Common.Random,
         Competences.Frontend.Common.Style,
         Competences.Frontend.Common.Translate,
-        Competences.Frontend.Document,
         Competences.Frontend.Grid.Action,
         Competences.Frontend.Grid.App,
         Competences.Frontend.Grid.State,
@@ -40,7 +39,7 @@ library
         Competences.Frontend.Grid.Topic,
         Competences.Frontend.Grid.View.Editable,
         Competences.Frontend.Grid.View,
-        Competences.Frontend.Modal.CompetenceEditor
+        Competences.Frontend.SyncDocument
     build-depends:
         base ^>=4.20.0.0,
         aeson,
