Implement ordering of collections based on them having certain properties

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -28,11 +28,15 @@ library
         Competences.Frontend.App.State,
         Competences.Frontend.App.Topics,
         Competences.Frontend.Common.Button,
+        Competences.Frontend.Common.Effect,
         Competences.Frontend.Common.Icon,
         Competences.Frontend.Common.Random,
         Competences.Frontend.Common.Style,
         Competences.Frontend.Common.Translate,
-        Competences.Frontend.CompetenceEditor,
+        Competences.Frontend.Common,
+        Competences.Frontend.Component.CompetenceEditor,
+        Competences.Frontend.Component.CompetenceGridEditor,
+        Competences.Frontend.Page.EditCompetenceGridPage,
         Competences.Frontend.GridEditor.Action,
         Competences.Frontend.GridEditor.App,
         Competences.Frontend.GridEditor.State,
