--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -31,6 +31,7 @@ library
         Competences.Document.Competence
         Competences.Document.CompetenceGrid
         Competences.Document.Id
+        Competences.Document.Order
         Competences.Document.Resource
         Competences.Document.User
         Competences.Document
@@ -41,6 +42,7 @@ library
         bytestring,
         containers,
         cryptohash-sha1,
+        extra,
         generics-sop,
         ixset-typed,
         optics-core,
