--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -38,6 +38,7 @@ library
     build-depends:
         base ^>=4.20.0.0,
         aeson,
+        base64-bytestring,
         binary,
         bytestring,
         containers,
