--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -8,6 +8,10 @@ category:           Web
 build-type:         Simple
 extra-doc-files:    CHANGELOG.md
 
+flag wasm
+     description: Build for WASM
+        default:     False
+
 common warnings
     ghc-options: -Wall
 
@@ -72,8 +76,16 @@ executable competences-frontend
         bytestring,
         competences-common,
         competences-frontend,
-        jsaddle-warp,
-        optparse-applicative,
         text
+    if !flag(wasm)
+        build-depends:
+            jsaddle-warp,
+            optparse-applicative
+    if flag(wasm)
+        cpp-options: -DWASM
+        ghc-options:
+          -no-hs-main
+          -optl-mexec-model=reactor
+          "-optl-Wl,--export=hs_start"
     hs-source-dirs:   app
     default-language: GHC2024
