Switch to Tailwind for styling

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -31,25 +31,30 @@ library
         Competences.Frontend.App.RegisteredComponentRegistrations,
         Competences.Frontend.App.State,
         Competences.Frontend.App.Topics,
-        Competences.Frontend.Common.Button,
         Competences.Frontend.Common.Effect,
-        Competences.Frontend.Common.Icon,
-        Competences.Frontend.Common.Modal,
         Competences.Frontend.Common.Random,
         Competences.Frontend.Common.Reorder,
-        Competences.Frontend.Common.Style,
         Competences.Frontend.Common.Translate,
         Competences.Frontend.Common,
         Competences.Frontend.Component.CompetenceEditor,
         Competences.Frontend.Component.CompetenceGridEditor,
         Competences.Frontend.Page.EditCompetenceGridPage,
-        Competences.Frontend.SyncDocument
+        Competences.Frontend.SyncDocument,
+        Competences.Frontend.View,
+        Competences.Frontend.View.Button,
+        Competences.Frontend.View.Form,
+        Competences.Frontend.View.Icon,
+        Competences.Frontend.View.Layout,
+        Competences.Frontend.View.Modal,
+        Competences.Frontend.View.Tailwind,
+        Competences.Frontend.View.Text
     build-depends:
         base ^>=4.21.0.0,
         aeson,
         bytestring,
         competences-common,
         containers,
+        extra,
         jsaddle,
         miso >= 1.9.0,
         mtl,
