--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -38,6 +38,7 @@ library
         Competences.Frontend.Common,
         Competences.Frontend.Component.CompetenceEditor,
         Competences.Frontend.Component.CompetenceGridEditor,
+        Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.CompetenceSelector,
         Competences.Frontend.Page.EditCompetenceGridPage,
         Competences.Frontend.SyncDocument,
