--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -36,6 +36,7 @@ library
         Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.CompetenceSelector,
         Competences.Frontend.Component.EvidenceEditor,
+        Competences.Frontend.Component.UserSelector,
         Competences.Frontend.Page.EditCompetenceGridPage,
         Competences.Frontend.Page.ViewCompetenceGridPage,
         Competences.Frontend.SyncDocument,
