Quite a big refactor
I think, this is the style I want to use for declaring my UI

There are currently a ton of warnings and the UI is still a bit
broken, so this is currently work in progress, but it builds again,
so I created this commit

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -36,7 +36,9 @@ library
         Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.CompetenceSelector,
         Competences.Frontend.Component.Editable,
+        Competences.Frontend.Component.EvidenceCreator,
         Competences.Frontend.Component.EvidenceEditor,
+        Competences.Frontend.Component.ListSelector,
         Competences.Frontend.Component.UserListEditor,
         Competences.Frontend.Component.UserSelector,
         Competences.Frontend.Page.EditCompetenceGridPage,
@@ -65,9 +67,9 @@ library
         mtl,
         optics-core,
         random,
-        servant,
         stm,
         text,
+        time,
         unliftio
     hs-source-dirs:   lib
     default-language: GHC2024
