--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -36,12 +36,15 @@ library
         Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.CompetenceSelector,
         Competences.Frontend.Component.Editable,
+        Competences.Frontend.Component.EnumSelector,
         Competences.Frontend.Component.EvidenceCreator,
         Competences.Frontend.Component.EvidenceEditor,
+        Competences.Frontend.Component.EvidenceSelector,
         Competences.Frontend.Component.ListSelector,
         Competences.Frontend.Component.UserListEditor,
         Competences.Frontend.Component.UserSelector,
         Competences.Frontend.Page.EditCompetenceGridPage,
+        Competences.Frontend.Page.EvidencesPage,
         Competences.Frontend.Page.ManageUsersPage,
         Competences.Frontend.Page.ViewCompetenceGridPage,
         Competences.Frontend.SyncDocument,
