--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -31,11 +31,11 @@ library
         Competences.Frontend.Common.Reorder,
         Competences.Frontend.Common.Translate,
         Competences.Frontend.Common,
-        Competences.Frontend.Component.CompetenceEditor,
         Competences.Frontend.Component.CompetenceGridEditor,
         Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.DateSelector,
         Competences.Frontend.Component.Editable,
+        Competences.Frontend.Component.Editor,
         Competences.Frontend.Component.EnumSelector,
         Competences.Frontend.Component.EvidenceCompetenceSelector,
         Competences.Frontend.Component.EvidenceCreator,
