Refactor Editor and build new features

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -35,6 +35,13 @@ library
         Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.DateSelector,
         Competences.Frontend.Component.Editor,
+        Competences.Frontend.Component.Editor.Editable,
+        Competences.Frontend.Component.Editor.EditorField,
+        Competences.Frontend.Component.Editor.FlowView,
+        Competences.Frontend.Component.Editor.FormView,
+        Competences.Frontend.Component.Editor.TableView,
+        Competences.Frontend.Component.Editor.Types,
+        Competences.Frontend.Component.Editor.View,
         Competences.Frontend.Component.EnumSelector,
         Competences.Frontend.Component.EvidenceCompetenceSelector,
         Competences.Frontend.Component.EvidenceCreator,
