--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -48,6 +48,7 @@ library
         Competences.Frontend.Component.EvidenceEditor,
         Competences.Frontend.Component.EvidenceSelector,
         Competences.Frontend.Component.ListSelector,
+        Competences.Frontend.Component.Static,
         Competences.Frontend.Component.UserListEditor,
         Competences.Frontend.Component.UserSelector,
         Competences.Frontend.Page.EvidencesPage,
