--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -27,6 +27,7 @@ library
     exposed-modules:
         Competences.Frontend.App,
         Competences.Frontend.Common.Effect,
+        Competences.Frontend.Common.MisoExt,
         Competences.Frontend.Common.Random,
         Competences.Frontend.Common.Reorder,
         Competences.Frontend.Common.Translate,
