Move Selector-like components to separate folder

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -34,7 +34,6 @@ library
         Competences.Frontend.Common,
         Competences.Frontend.Component.CompetenceGridEditor,
         Competences.Frontend.Component.CompetenceGridViewer,
-        Competences.Frontend.Component.DateSelector,
         Competences.Frontend.Component.Editor,
         Competences.Frontend.Component.Editor.Editable,
         Competences.Frontend.Component.Editor.EditorField,
@@ -43,15 +42,16 @@ library
         Competences.Frontend.Component.Editor.TableView,
         Competences.Frontend.Component.Editor.Types,
         Competences.Frontend.Component.Editor.View,
-        Competences.Frontend.Component.EnumSelector,
         Competences.Frontend.Component.EvidenceCompetenceSelector,
         Competences.Frontend.Component.EvidenceCreator,
         Competences.Frontend.Component.EvidenceEditor,
-        Competences.Frontend.Component.EvidenceSelector,
-        Competences.Frontend.Component.ListSelector,
+        Competences.Frontend.Component.Selector.DateSelector,
+        Competences.Frontend.Component.Selector.EnumSelector,
+        Competences.Frontend.Component.Selector.EvidenceSelector,
+        Competences.Frontend.Component.Selector.ListSelector,
+        Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.UserListEditor,
-        Competences.Frontend.Component.UserSelector,
         Competences.Frontend.Page.EvidencesPage,
         Competences.Frontend.Page.ViewCompetenceGridPage,
         Competences.Frontend.SyncDocument,
