Make selectors a bit more flexible and add possibility to use them as editor fields

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -43,8 +43,8 @@ library
         Competences.Frontend.Component.Editor.Types,
         Competences.Frontend.Component.Editor.View,
         Competences.Frontend.Component.EvidenceCompetenceSelector,
-        Competences.Frontend.Component.EvidenceCreator,
         Competences.Frontend.Component.EvidenceEditor,
+        Competences.Frontend.Component.Selector.Common,
         Competences.Frontend.Component.Selector.DateSelector,
         Competences.Frontend.Component.Selector.EnumSelector,
         Competences.Frontend.Component.Selector.EvidenceSelector,
@@ -52,7 +52,6 @@ library
         Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.UserListEditor,
-        Competences.Frontend.Page.EvidencesPage,
         Competences.Frontend.Page.ViewCompetenceGridPage,
         Competences.Frontend.SyncDocument,
         Competences.Frontend.View,
