--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -45,6 +45,7 @@ library
         Competences.Frontend.Component.EvidenceCompetenceSelector,
         Competences.Frontend.Component.EvidenceEditor,
         Competences.Frontend.Component.Selector.Common,
+        Competences.Frontend.Component.Selector.CompetenceGridSelector,
         Competences.Frontend.Component.Selector.DateSelector,
         Competences.Frontend.Component.Selector.EnumSelector,
         Competences.Frontend.Component.Selector.EvidenceSelector,
