--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -13,7 +13,7 @@ flag wasm
      default:     False
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Werror
 
 library
     import:           warnings
@@ -54,7 +54,6 @@ library
         Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.UserListEditor,
-        Competences.Frontend.Page.ViewCompetenceGridPage,
         Competences.Frontend.SyncDocument,
         Competences.Frontend.View,
         Competences.Frontend.View.Button,
