--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -53,6 +53,7 @@ library
         Competences.Frontend.Component.Selector.ObservationSelector,
         Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.Static,
+        Competences.Frontend.Component.TemplateEvaluator,
         Competences.Frontend.Component.UserListEditor,
         Competences.Frontend.SyncDocument,
         Competences.Frontend.View,
