--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -54,6 +54,7 @@ library
         Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.TemplateEvaluator,
+        Competences.Frontend.Component.StatisticsViewer,
         Competences.Frontend.Component.UserListEditor,
         Competences.Frontend.SyncDocument,
         Competences.Frontend.View,
