The backend now serves the frontend when authenticated

--- a/backend/competences-backend.cabal
+++ b/backend/competences-backend.cabal
@@ -30,6 +30,7 @@ library
     build-depends:
         base ^>=4.21.0.0,
         aeson,
+        blaze-html,
         bytestring,
         competences-common,
         containers,
