Frontend establishes connection to backend in WASM mode

--- a/backend/competences-backend.cabal
+++ b/backend/competences-backend.cabal
@@ -54,6 +54,7 @@ library
         stm,
         text,
         time,
+        uuid-types,
         wai,
         wai-extra,
         wai-websockets,
