--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -35,6 +35,7 @@ library
         Competences.Document.Lock
         Competences.Document.Order
         Competences.Document.Resource
+        Competences.Document.Task
         Competences.Document.Template
         Competences.Document.User
         Competences.Document.Verdict
