Start separating command into multiple modules

--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -25,6 +25,9 @@ library
         Competences.Command
         Competences.Command.ChangeField
         Competences.Command.Common
+        Competences.Command.Competences
+        Competences.Command.Evidences
+        Competences.Command.Users
         Competences.Common.IxSet
         Competences.Document
         Competences.Document.Assessment
